# beehive-nature

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  DEMO.md  ORDERS-1.md  README.md  REVIEWING.md  SECURITY.md  SPEC_hulled_hemp_hearts_COA_tri_jurisdictional.md  STATUS.md
.githooks/: pre-commit
.github/workflows/: secret-scan.yml  tests.yml
crates/adapter-arweave/: Cargo.toml
crates/adapter-arweave/src/: lib.rs
crates/adapter-autonomi/: Cargo.toml
crates/adapter-autonomi/src/: lib.rs
crates/adapter-carrier/: Cargo.toml
crates/adapter-carrier/src/: lib.rs
crates/adapter-lti/: Cargo.toml
crates/adapter-lti/fixtures/: synthetic_ags_score.json
crates/adapter-lti/src/: lib.rs
crates/b-token/: Cargo.toml
crates/b-token/src/: lib.rs
crates/bnr-shell/: Cargo.toml
crates/bnr-shell/src/: lib.rs
crates/capability/: Cargo.toml
crates/capability/src/: lib.rs
crates/chain-eos/: Cargo.toml
crates/chain-eos/src/: abi.rs  lib.rs  main.rs
crates/chain-eos/tests/: full_pipeline.rs  mock_ship_stream.rs
crates/chain-exsat-evm/: Cargo.toml  README.md
crates/chain-exsat-evm/src/: abi.rs  cursor.rs  indexer.rs  lib.rs  reorg.rs  signatures.rs
crates/chain-exsat-evm/tests/: fixture_indexing.rs
crates/chain-zano/: Cargo.toml
crates/chain-zano/src/: keys.rs  lib.rs  slip0010.rs  testvec.rs  view.rs
crates/coa/: Cargo.toml
crates/coa/src/: lib.rs
crates/composition/: Cargo.toml
crates/composition/src/: lib.rs  main.rs
crates/composition/tests/: pipeline_daemon.rs
crates/console-api/: Cargo.toml
crates/console-api/src/: lib.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: lib.rs
crates/denomination/: Cargo.toml
crates/denomination/src/: lib.rs
crates/dispute-engine/: Cargo.toml
crates/dispute-engine/src/: lib.rs
crates/dispute-engine/tests/: verdict_to_settlement.rs
crates/dro-signer/: Cargo.toml
crates/dro-signer/src/: lib.rs
crates/dro-signer/tests/: engine_to_signer.rs
crates/escrow-core/: Cargo.toml
crates/escrow-core/src/: lib.rs
crates/escrow-core/tests/: properties.rs
crates/escrow-engine/: Cargo.toml
crates/escrow-engine/examples/: live_pipeline.rs
crates/escrow-engine/src/: lib.rs
crates/escrow-engine/tests/: stream_to_state_machine.rs
crates/event-bus/: Cargo.toml
crates/event-bus/src/: lib.rs
crates/language-authority/: Cargo.toml
crates/language-authority/src/: lib.rs
crates/mastery-ledger/: Cargo.toml
crates/mastery-ledger/src/: lib.rs
crates/normalizer/: Cargo.toml
crates/normalizer/src/: lib.rs
crates/normalizer/tests/: pipeline_to_bus.rs
crates/onboarding/: Cargo.toml
crates/onboarding/src/: age.rs  lib.rs
crates/price-feed/: Cargo.toml
crates/price-feed/src/: lib.rs
crates/reputation-engine/: Cargo.toml
crates/reputation-engine/src/: lib.rs
crates/reputation-engine/tests/: score_to_event.rs
crates/sense-atproto/: Cargo.toml
crates/sense-atproto/proptest-regressions/: lib.txt
crates/sense-atproto/src/: lib.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: events.rs  evidence.rs  lib.rs
crates/treasury-t0/: Cargo.toml
crates/treasury-t0/src/: lib.rs
crates/type-bindings/: Cargo.toml
crates/type-bindings/src/: lib.rs
crates/verify-trezor/: Cargo.toml
crates/verify-trezor/src/: lib.rs
crates/vocabulary/: Cargo.toml
crates/vocabulary/src/: lib.rs
crates/zano-watcher/: Cargo.toml
crates/zano-watcher/examples/: live_observe.rs
crates/zano-watcher/src/: lib.rs
dockets/: BUILD_DOCKET_phases_0-3.md  B_EMISSION_operant_reward_model.md  DATA_COMMONS_phase_charter.md  DISPATCH-to-code_attestation-tiers.md  DISPATCH-to-code_phases_0-3.md  HARDWARE_ADAPTER_scope.md  K-D1-to-K-D5-seam.md  LTI_B_ADAPTER_seam_spec.md  M1_arweave_cost_pilot.md  MASTERY_LEDGER_commons_first.md  NORTH_STAR_for_sculptors.md  PROOF_OF_UNIQUE_LIFE_design_note.md  SKAISTS_DAO_orientation_handbook.md  T3_device_enrollment_flows.md  T4_console_capability_matrix.md  TIERED_ACCESS_attestation_design.md  k002-seam-fixes.md  k003-hardening.md
docs/: BIND-1.md  CD-29-resource-paymaster-spec.md  CONSTITUTION.md  DESIGN-BRIEF-01-dashboard.md  DESIGN-BRIEF-02-bigen-library.md  DESIGN-CONSTRAINTS.md  FOUNDER-RIGHT-1.md  LICENSING.md  NON-VALUE-STATES.md  ROUTING.md  VOCABULARY.md  article-vi-ratification-draft.md  article-vi-s3.md  bnature-build-brief.md  decentralization-ladder.md  feature-backlog.md  fusd-peg-monitor.md  risk-register.md
docs/adr/: 0001-vega-lite-spec-as-serde-struct.md
docs/architecture/: bnr-ose-spec.md  crypto-delta-spec.md  did-autonomi-spec.md  dro-signer-brief.md  handoff-v1.2-superseded.md  handoff-v1.3.md  integration-plan.md  protocol-proposal.md  zano-timelock-findings.md
docs/audits/: glm-m1-consumption-audit-report.md  glm-t31-v2-consumption-audit-report.md  glm-t4-consumption-audit-report.md  glm-t5-consumption-audit-report.md
docs/design/: non-value-states.md
docs/runbooks/: local-ship-node.md
fixtures/: antctl-status-fixture.json  browse-fixtures.json  demo-fixtures.json  listings-fixtures.json
governance/: anti-capture.md
proto/: messages-zano.proto
scripts/: secret-scan.sh
ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  fixture-browse.js  fixture-listings.js  fixture.js  format.js  main.jsx  styles.css
ui/src/components/: HashChip.jsx
ui/src/views/: Browse.jsx  Dispute.jsx  EscrowLifecycle.jsx  Listings.jsx  Orders.jsx  Profiles.jsx  Reputation.jsx
