[workspace]
resolver = "2"
members = [
    "crates/adapter-arweave",
    "crates/adapter-carrier",
    "crates/chain-eos",
    "crates/chain-zano",
    "crates/composition",
    "crates/dispute-engine",
    "crates/dro-signer",
    "crates/escrow-core",
    "crates/escrow-engine",
    "crates/event-bus",
    "crates/normalizer",
    "crates/reputation-engine",
    "crates/shared-types",
    "crates/zano-watcher",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"

# Pinned per the crypto delta spec. Verify exact API spellings on first build
# (see STATUS.md — curve25519-dalek 4.x basepoint-mul syntax may need adjustment).
[workspace.dependencies]
curve25519-dalek = "4"
sha3 = "0.10"
sha2 = "0.10"
hmac = "0.12"
zeroize = "1"
hex-literal = "0.4"