# Beehive Nature Reserve Kernel — Rust workspace.
# A coordination kernel (private-commerce settlement, escrow, disputes,
# reputation, multi-chain indexing). See docs/CONSTITUTION.md.
[workspace]
resolver = "2"
members = [
    "crates/adapter-arweave",
    "crates/adapter-autonomi",
    "crates/adapter-carrier",
    "crates/adapter-lti",
    "crates/b-token",
    "crates/capability",
    "crates/chain-eos",
    "crates/chain-exsat-evm",
    "crates/chain-zano",
    "crates/composition",
    "crates/console-api",
    "crates/dispute-engine",
    "crates/dro-signer",
    "crates/escrow-core",
    "crates/escrow-engine",
    "crates/event-bus",
    "crates/mastery-ledger",
    "crates/normalizer",
    "crates/reputation-engine",
    "crates/sense-atproto",
    "crates/shared-types",
    "crates/type-bindings",
    "crates/verify-trezor",
    "crates/zano-watcher",
]

[workspace.metadata]
name = "Beehive Nature Reserve Kernel"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"

# Pinned per the crypto delta spec. Verify exact API spellings on first build
# (see STATUS.md — curve25519-dalek 4.x basepoint-mul syntax may need adjustment).
[workspace.dependencies]
curve25519-dalek = "4"
sha3 = "0.10"
sha2 = "0.10"
hmac = "0.12"
zeroize = "1"
hex-literal = "0.4"