[package]
name = "adapter-arweave"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "bNature permanence.anchor adapter: bundle CanonicalEvents and anchor them to an independent substrate (v1 mock-first; real Arweave HTTP + wallet signing gate on credentials)"

[dependencies]
shared-types = { path = "../shared-types" }
serde_json = "1"
sha2 = { workspace = true }
