[package]
name = "adapter-carrier"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "bNature carrier-tracking evidence adapter: CarrierApi trait + mapping into dispute-engine Evidence (v1 mock-first; real HTTP gates on carrier API keys)"

[dependencies]
dispute-engine = { path = "../dispute-engine" }
serde_json = "1"
sha2 = { workspace = true }
