[package]
name = "adapter-lti"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "LTI 1.3 mastery -> b seam adapter (C-6): pure QuestWeight + fail-closed admission, mock-first (real JWT/JWKS + DID-binding/PoUL gate on a registered platform). The adapter REQUESTS emission; the b engine enforces the 420/PoUL/velocity cap at the ledger. A compromised adapter cannot over-mint."

[dependencies]
# Reuse the canonical Did (no type-fork; K-D1 discipline). Pulls capability's
# core; the identity stage is capability's domain anyway (DID + PoUL gate).
capability = { path = "../capability" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
