[package]
name = "b-token"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "bNature resource.accounting core (Phase 3 scaffold): `b` — transferable, Vaulta-native energy (mint-on-ResourceProof, burn-on-use, spendable) — as a balance ledger; and Respect — non-transferable, per-human standing that modulates the rate of b unlock — as a type that STRUCTURALLY cannot be transferred. The paymaster basket and on-chain settlement gate behind adapters."

[dependencies]
capability = { path = "../capability" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
