[package]
name = "capability"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "bNature identity.root + Capability primitive (Phase 2 scaffold): DID principals and UCAN-shaped delegable capability tokens. v1 ships the capability-match + time-bound authorization CORE (pure, tested). Signature issuance/verification (Ed25519 over the canonical form) gates behind the Verifier trait — the pending crypto step."

[dependencies]
type-bindings = { path = "../type-bindings" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Rider 1 (founder, 2026-07-16): floor at >=2.0 HARD. 1.x carries
# RUSTSEC-2022-0093 — a signing oracle: its API let a caller supply a public key
# unrelated to the signing key, leaking the private key over repeated signatures.
# Rider 2: `zeroize` so signing keys scrub on drop; the workspace already pins it.
ed25519-dalek = { version = "2", features = ["zeroize"] }
