[package]
name = "chain-exsat-evm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "bNature sense adapter: exSat EVM log indexing into the canonical event bus (C-1). Hand-rolled EVM log decoder; fail-closed reorg handling; resumable cursor."

[dependencies]
shared-types = { path = "../shared-types" }
# Keccak256 (original padding) — what the EVM hashes event signatures with.
# NOT sha3::Sha3_256 (NIST padding); the two differ and are not interchangeable.
sha3 = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Fixtures only — this crate's tests never touch a live RPC.
serde_json = "1"
