[package]
name = "composition"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "bNature runtime daemon: wires the proven crates (ingest → normalize → bus → escrow → DRO → reputation) into one process"

[dependencies]
chain-eos = { path = "../chain-eos" }
zano-watcher = { path = "../zano-watcher" }
dro-signer = { path = "../dro-signer" }
escrow-core = { path = "../escrow-core" }
escrow-engine = { path = "../escrow-engine" }
event-bus = { path = "../event-bus" }
normalizer = { path = "../normalizer" }
reputation-engine = { path = "../reputation-engine" }
shared-types = { path = "../shared-types" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
# Promoted from dev-deps: the `demo` bin builds an escrow via the existing
# `escrow_core::Escrow::new(created_at: time::OffsetDateTime)` — bins build
# against [dependencies], not dev-deps. Not a new crate (already in the tree).
time = { version = "0.3", features = ["macros"] }

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.29"
