[package]
name = "composition"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "bNature runtime daemon: wires the proven crates (ingest → normalize → bus → escrow → DRO → reputation) into one process"

[dependencies]
chain-eos = { path = "../chain-eos" }
zano-watcher = { path = "../zano-watcher" }
dispute-engine = { path = "../dispute-engine" }
dro-signer = { path = "../dro-signer" }
escrow-core = { path = "../escrow-core" }
escrow-engine = { path = "../escrow-engine" }
event-bus = { path = "../event-bus" }
normalizer = { path = "../normalizer" }
reputation-engine = { path = "../reputation-engine" }
shared-types = { path = "../shared-types" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
# Promoted from dev-deps: the `demo` bin builds an escrow via the existing
# `escrow_core::Escrow::new(created_at: time::OffsetDateTime)` — bins build
# against [dependencies], not dev-deps. Not a new crate (already in the tree).
time = { version = "0.3", features = ["macros"] }
# The demo bin's --json mode serializes the real §9.3 event types; serde and
# serde_json were already in the lock (shared-types / escrow-core edges) —
# exact-edge additions (serde only for naming the Serialize bound).
serde = "1"
serde_json = "1"

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.29"
