[package]
name = "console-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "bNature console read-model: a derived ConsoleView the SKAISTS LOVErnment console renders. Embeds the P1 FarmSnapshot and folds real settlement CanonicalEvents (Order/Product/Reputation) into activity + standing. Pure reducer — a read surface over the bus, never an authority."

[dependencies]
shared-types = { path = "../shared-types" }
adapter-autonomi = { path = "../adapter-autonomi" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
