[package]
name = "denomination"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "The Denomination Constant (D-14): every OSe surface shows two gauges — b in function, money in the user's currency — and never a conversion rate outside the protocol draw facility. A function surface cannot render without a b gauge; a stale b balance refuses rather than showing a wrong number. Kernel, because b is BNR economics: this cannot live in the neutral layer without infecting it."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
