[package]
name = "dispute-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "bNature Tier-1 dispute adjudication: provenance-weighted verdicts (v1: pure decision logic; AI inference, vault decryption, carrier APIs gate behind EvidenceProvider)"

[dependencies]
sha2 = { workspace = true }

[dev-dependencies]
dro-signer = { path = "../dro-signer" }
escrow-core = { path = "../escrow-core" }
time = { version = "0.3", features = ["macros"] }
