[package]
name = "dro-signer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "bNature DRO settlement authority: escrow transitions → SettlementIntent → ZanoSigner seam (v1: decision logic + mock signer; real crypto gates on the firmware track)"

[dependencies]
escrow-core = { path = "../escrow-core" }

[dev-dependencies]
escrow-engine = { path = "../escrow-engine" }
shared-types = { path = "../shared-types" }
time = { version = "0.3", features = ["macros"] }
