[package]
name = "escrow-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "bNature escrow engine: replays CanonicalEvents into escrow-core state machines"

[dependencies]
escrow-core = { path = "../escrow-core" }
shared-types = { path = "../shared-types" }
time = { version = "0.3" }

[dev-dependencies]
chain-eos = { path = "../chain-eos" }
event-bus = { path = "../event-bus" }
normalizer = { path = "../normalizer" }
serde_json = "1"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time", "rt-multi-thread"] }
futures-util = "0.3"
tokio-tungstenite = "0.29"
