[package]
name = "language-authority"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "BNR holds an interface, never a corpus. Types and the retention harness for the ratified language-sovereignty law: no trait method returns or enumerates a corpus, Preferences has no disability field or verification path, and probe_retention is demonstrated to FAIL on a system that retains."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
