[package]
name = "sense-atproto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ATProto sense adapter: pure predicate gate + normalize for the BIND-1 seam (K-4)"

[dependencies]
shared-types = { path = "../shared-types" }
sha2 = { workspace = true }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
proptest = "1"
